dnl Process this file with autoconf to produce a configure script.

dnl set version
m4_define([verif_major_version], [0])
m4_define([verif_minor_version], [2])
m4_define([verif_version],
	[verif_major_version.verif_minor_version])

AC_INIT([verif],[verif_version],[Magnus.Hagdorn@ed.ac.uk])
AM_INIT_AUTOMAKE

dnl minimum required glimmer version
min_glimmer_version=0.5.5

VERIF_MAJOR_VERSION=verif_major_version
VERIF_MINOR_VERSION=verif_minor_version
VERIF_VERSION=verif_version
AC_SUBST(VERIF_MAJOR_VERSION)
AC_SUBST(VERIF_MINOR_VERSION)
AC_SUBST(VERIF_VERSION)

AC_PROG_RANLIB
AC_PROG_FC
AC_LANG_PUSH(Fortran)
AC_FC_SRCEXT(f90)
FCFLAGS="$FCFLAGS -fpp"
dnl Checking for python
AM_PATH_PYTHON([2.3],,[AC_MSG_RESULT(need at least python 2.3)])

dnl checking for glimmer prefix
AM_PATH_GLIMMER([$min_glimmer_version])
if test x$GLIMMER_PREFIX = x ;then
  AC_MSG_ERROR([Could not find glimmer])
fi

AC_PATH_PROG(CONVERT, convert)

FCFLAGS="$CFLAGS $GLIMMER_CFLAGS"
LIBS="$GLIMMER_LIBS $LIBS"

AC_CONFIG_FILES([Makefile src/Makefile src/fortran/Makefile src/python/Makefile src/matlab/Makefile tests/Makefile data/Makefile])

AC_OUTPUT()
